[package]
name = "mdns-browser-ui"
version = "0.27.8"
edition = "2021"

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
panic = "abort"
strip = "debuginfo"

[dependencies]
# crates
chrono = { workspace = true }
console_error_panic_hook = "0.1"
console_log = "1.0"
futures = "0.3"
icondata = "0.6"
icondata_core = "0.1"
js-sys = "0.3"
leptos = { version = "0.8", features = ["csr"] }
log = { workspace = true }
reactive_stores = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
strsim = "0.11"
web-sys = { version = "0.3.77", features = [
    "Window",
    "EventTarget",
    "AddEventListenerOptions",
    "ScrollToOptions",
    "ScrollBehavior",
] }

# git
thaw = { git = "https://github.com/thaw-ui/thaw", branch = "thaw/v0.5", package = "thaw", features = [
    "csr",
] }
thaw_utils = { git = "https://github.com/thaw-ui/thaw", branch = "thaw/v0.5", package = "thaw_utils" }
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", branch = "v2", features = [
    "core",
    "event",
] }

# local
shared_constants = { path = "./crates/shared_constants" }
models = { path = "./crates/models" }

[workspace]
members = ["crates/models", "crates/shared_constants", "src-tauri"]
resolver = "2"

[workspace.dependencies]
chrono = "0.4"
reactive_stores = "0.2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "2.0"
tokio = { version = "1.45", features = ["time"] }
