[package]
name = "mdns-browser"
version = "0.23.1"
description = "mDNS browser"
authors = ["hrzlgnm"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[target.'cfg(not(any(target_os="android",target_os="ios")))'.dependencies]
clap = { version = "4.5", features = ["derive"] }
tauri-plugin-updater = "2.0"
thiserror = { workspace = true }
chrono = { workspace = true }

[dependencies]
# crates
log = { workspace = true }
mdns-sd = "0.15"
serde = { workspace = true }
serde_json = "1.0"
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-log = { version = "2.4", features = ["colored"] }
tauri-plugin-opener = "2.2"
tokio = { workspace = true }

# local
models = { path = "../models" }
shared_constants = { path = "../shared_constants" }

# platform-specific dependencies
[target.'cfg(not(windows))'.dependencies]
pnet = "0.35"

[target.'cfg(windows)'.dependencies]
ipconfig = "0.3"

[target.'cfg(target_os="linux")'.dependencies]
regex = "1.11"

[lib]
name = "mdns_browser_lib"
crate-type = ["staticlib", "cdylib", "lib"]
