# Copyright 2026 hrzlgnm
# SPDX-License-Identifier: MIT-0

[package]
name = "mdns-browser"
version = "1.9.0"
description = "mDNS browser"
authors = ["hrzlgnm"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[target.'cfg(not(any(target_os="android",target_os="ios")))'.dependencies]
clap = { workspace = true }
tauri-plugin-updater = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dependencies]
# crates
log = { workspace = true }
mdns-sd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-opener = { workspace = true }
tokio = { workspace = true }

# local
models = { path = "../crates/models" }
shared_constants = { path = "../crates/shared_constants" }
webkit2gtk-nvidia-quirk = { path = "../crates/webkit2gtk-nvidia-quirk" }

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[target.'cfg(not(windows))'.dependencies]
pnet = { workspace = true }

[target.'cfg(windows)'.dependencies]
ipconfig = { workspace = true }

[lib]
name = "mdns_browser_lib"
crate-type = ["staticlib", "cdylib", "lib"]
